# fatd

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  create_dirs.sh  main.c  makefs  rawfs.sh  removefs.sh
fat_driver/: CMakeLists.txt  cache.c  cache.h  fat.c  fat.h  file.c  file.h  internal.h  tables.h  util.h
